<resources>
    <string name="app_name">Database</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_id">Product ID</string>
    <string name="not_assigned">Not Assigned</string>
    <string name="add">ADD</string>
    <string name="find">FIND</string>
    <string name="delete">DELETE</string>
    <string name="delete_all">DELETE ALL</string>
    <string name="update">UPDATE</string>
</resources>
